--- a/css/juego.css
+++ b/css/juego.css
@@ -1,10 +1,31 @@
+#juego{
+  height: 500px;
+  width: 500px;
+  background-color: red;
+}
+
+#objetivo img{
+  width: 200px;
+  height: 200px;
+}
+
+.puzzle img{
+  float: left;
+  box-sizing: border-box;
+  border: solid 1px black;
+  width: 33.33%;
+  height: 33.33%;
+}
+
+
 /*Código armado por La Foca Loca S.A. No modificar*/
 body {
   font-family: Arial, sans-serif;
   width: 940px;
   margin: 5% auto;
   min-height: 100%;
-  background-image: url(../images/adventure.jpg);
+  background-image: url(../images/pokemon-detective-pikachu_7680x4320_xtrafondos.com.jpg);
+  background-size: 100%;
 }
 ul {
   padding-left: 0;
@@ -52,6 +73,8 @@ li::before {
   text-align: center;
   animation: fadein 2s;
 }
+
+
 
 @keyframes fadein {
   from { opacity: 0; }
